style: fix broken app image style on FireFox

--- a/assets/hb/modules/theme-start/scss/_apps.scss
+++ b/assets/hb/modules/theme-start/scss/_apps.scss
@@ -15,20 +15,28 @@
   }
 }
 
+.hb-start-app-img-placeholder {
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .hb-start-app-img {
+  opacity: 0;
+}
+
+.hb-start-app-img-container {
   height: 48px;
   width: 48px;
-  transition: transform 1s linear;
 
-  &:not(.loaded) {
-    &::before {
-      content: attr(data-title);
-      font-size: 1.5rem;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
+  &.loaded {
+    .hb-start-app-img {
+      opacity: 1;
+    }
+
+    .hb-start-app-img-placeholder {
+      display: none;
     }
   }
 }
@@ -43,7 +51,8 @@
       color: #fff;
     }
 
-    .hb-start-app-img {
+    .hb-start-app-img,
+    .hb-start-app-img-placeholder {
       animation: 1s linear app-flip;
     }
   }
